sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: '<-' expected but '{' found.
  for (i in (0,len-2) {
                      ^AlgBubbleSort1:9: error: illegal start of simple expression
} 
^