sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var len=getValueCount()
  for (i in (0,len-2) {
    if (!isSmaller(i,i+1)) {
      swap(i,i+1)
    }
  }
}